@@ -131,6 +131,9 @@ Maintenance:
   duplicate rows with the same id field)
 * Added --conf option to command line scripts, allowing the user to specify a 
   different LocalSettings.php.
+* Maintenance script to delete unused text records
+* Maintenance script to delete non-current revisions
+* Maintenance script to wipe a page and all revisions from the database
 
 i18n / Languages:
 * Partial support for Basque language (from wikipedia and meta)
